force-app/main/default/objects/Environment_Variables__c/Environment_Variables__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings dependent on environment: production vs sandbox</description>
    <label>Environment Variables</label>
</CustomObject>