force-app/main/default/objects/Environment_Variables__c/fields/Generic_Sandbox_Email__c.field-meta.xml
<CustomField>
    <fullName>Generic_Sandbox_Email__c</fullName>
    <description>comma-separated list of emails to send in sandbox for any use case</description>
    <inlineHelpText>Append/Replace your email in this field for the flows to test</inlineHelpText>
    <label>Generic Sandbox Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>