force-app/main/default/objects/Environment_Variables__c/fields/Production_ASN_Flash_Email__c.field-meta.xml
<CustomField>
    <fullName>Production_ASN_Flash_Email__c</fullName>
    <label>Production ASN Flash Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>