force-app/main/default/objects/Environment_Variables__c/fields/Production_Marketing_Apps_Email__c.field-meta.xml
<CustomField>
    <fullName>Production_Marketing_Apps_Email__c</fullName>
    <label>Production Marketing Apps Email</label>
    <type>Email</type>
</CustomField>