force-app/main/default/objects/Environment_Variables__c/fields/Production_Order_Flash_Email__c.field-meta.xml
<CustomField>
    <fullName>Production_Order_Flash_Email__c</fullName>
    <description>Production order flash email. Used in flow created for MKT26-513:</description>
    <label>Production Order Flash Email</label>
    <type>Email</type>
</CustomField>