force-app/main/default/objects/Environment_Variables__c/fields/Production_POC_Help_EMEA_Email__c.field-meta.xml
<CustomField>
    <fullName>Production_POC_Help_EMEA_Email__c</fullName>
    <label>Production POC Help/EMEA Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>