force-app/main/default/objects/Environment_Variables__c/fields/Production_Secure_Erase_Email__c.field-meta.xml
<CustomField>
    <fullName>Production_Secure_Erase_Email__c</fullName>
    <label>Production Secure Erase Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>