force-app/main/default/objects/Environment_Variables__c/fields/Production_SOX_Batch_Email__c.field-meta.xml
<CustomField>
    <fullName>Production_SOX_Batch_Email__c</fullName>
    <label>Production SOX Batch Email</label>
    <type>Email</type>
</CustomField>